--- a/templates/webapp/mainpage.html
+++ b/templates/webapp/mainpage.html
@@ -79,7 +79,7 @@
             }
             const str = JSON.stringify(obj)
           
-            fetch("http://127.0.0.1:5000/", {
+            fetch("https://essay-grading-python.onrender.com/", {
                 method: 'POST',
                 body: JSON.stringify(obj),
             }).then((response) => response.json()).then((result) => {
